--- a/formulario-receitas/index.html
+++ b/formulario-receitas/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="estilo.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro Academia</title>
+    <title>Receita</title>
 </head>
 <body>
     <h2>Inscreva sua receita</h2>
